dodano backdrop i animacje do portfolio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <nav>
             <ul class="menu">
-              <li><a  class="hover-menu" href="./index.html">Agencja</a></li>
+              <li  class="hover-menu" ><a href="./index.html">Agencja</a></li>
               <li><a href="./portfolio.html">Portfolio</a></li>
               <li><a href="#">Kontakt</a></li>
             </ul>
@@ -59,8 +59,14 @@
 <main>
     <div class="bar">
         <h1>EFEKTYWNE ROZWIĄZANIA <br/>DLA WASZEGO BIZNESU</h1> 
-        <button type="button" class="button-bar">Zamów usługę</button>
+        <button href="#" type="button" class="button-bar" data-modal-open>Zamów usługę</button>
     </div>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-button" data-modal-close><span>X</span></button>
+      </div>
+    </div> 
+
     <section>
     <div class="container">
         <ul class="h-wrapper">
@@ -139,10 +145,9 @@
     <div class="container">
         <h2>Czym się zajmujemy</h2>
         <ul class="hp3-wrapper">
-            <div class="box1">
-              <div class="overlay">
-                <p>basdhdbashbdashhbba</p>
-              </div><li><img src="./images/1s.jpg" alt="Pisanie na klawiaturze" width="370" height="294"><div class="comuter-app"><h3>APLIKACJE KOMPUTEROWE</h3></div></li></div>
+            <div class="app-box">
+            <li><img src="./images/1s.jpg" alt="Pisanie na klawiaturze" width="370" height="294">
+              <div class="comuter-app"><h3>APLIKACJE KOMPUTEROWE</h3></div></li></div>
             <li><img src="./images/2s.jpg" alt="Praca ze smartfonem" width="370" height="294"><div class="smart-app"><h3>APLIKACJE MOBILNE</h3></div> </li>
             <li><img src="./images/3s.jpg" alt="Praca z tabletem" width="370" height="294"><div class="graphic-app">
               <h3>ROZWIĄZANIA GRAFICZNE</h3>
@@ -402,6 +407,7 @@
         </div>
       </div>
     </div>
-</footer>     
+</footer> 
+<script src="./js/modal.js"></script>    
 </body>
 </html>
