--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
           </div>
           <nav>
             <ul class="menu">
-              <li><a class="hover-menu" href="./index.html">Agencja</a></li>
-              <li><a href="./portfolio.html">Portfolio</a></li>
+              <li><a href="./index.html">Agencja</a></li>
+              <li><a class="hover-menu1" href="./portfolio.html">Portfolio</a></li>
               <li><a href="#">Kontakt</a></li>
             </ul>
           </nav>
@@ -64,93 +64,120 @@
       </section>
     </div>
     <ul class="realizations-wrapper container">
-        <li class="realizations">
-            <img class="techno"
+            <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
+              <img class="techno"
               src="./images/Techno.jpg"
               width="370"
               height="294"
               alt="Techno"
-            />
+            /></div>
             <div class="name-project">Technocrack</div>
             <div class="type-project">Strona internetowa</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/koszykowka.jpg"
               width="370"
               height="294"
               alt="Koszykowka"
-            />
+            /></div>
             <div class="name-project">Grafika New Orlean vs Golden Star</div>
             <div class="type-project">Dizajn</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/ryba.jpg"
               width="370"
               height="294"
               alt="Ryba"
-            />
+            /></div>
             <div class="name-project">Restauracja Seafood</div>
             <div class="type-project">Aplikacja</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/sluchawki.jpg"
               width="370"
               height="294"
               alt="Sluchawki"
-            />
+            /></div>
             <div class="name-project">Projekt Prime</div>
             <div class="type-project">Marketing</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/paczka.jpg"
               width="370"
               height="294"
               alt="Paczka"
-            />
+            /></div>
             <div class="name-project">Projekt Boxes</div>
             <div class="type-project">Aplikacja</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/monitor.jpg"
               width="370"
               height="294"
               alt="Monitor"
-            />
+            /></div>
             <div class="name-project">Inspiration has no Borders</div>
             <div class="type-project">Strona internetowa</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/ksiazka.jpg"
               width="370"
               height="294"
               alt="Ksiazka"
-            />
+            /></div>
             <div class="name-project">Magazyn Limited Edition</div>
             <div class="type-project">Dizajn</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/etykieta.jpg"
               width="370"
               height="294"
               alt="Etykieta"
-            />
+            /></div>
             <div class="name-project">Projekt LAB</div>
             <div class="type-project">Marketing</div>
           </li>
           <li class="realizations">
+            <div class="realizations-boxes">
+              <div class="overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div>
             <img
               src="./images/laptop.jpg"
               width="370"
               height="294"
               alt="Laptop"
-            />
+            /></div>
             <div class="name-project">Growing Business</div>
             <div class="type-project">Aplikacja</div>
           </li>
